--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -12,11 +12,13 @@ position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
+ 
+ 
 }
 
 .swiper-slide img {
-  display: block;
-  width: 100%;
+  //display: block;
+  //width: 100%;
   height: 100%;
   object-fit: cover;
 }
