--- a/src/scss/modals.scss
+++ b/src/scss/modals.scss
@@ -9,6 +9,9 @@ $background-heder: white;
 $background-navlist_activ:white;
 $key-call:#FF3E79;
 
+*{
+	border:1px solid green;
+}
 @font-face {
 	font-family: 'TTLakes';
 	font-style: normal;
@@ -56,10 +59,12 @@ right: 90px;
 height: 5px;
 
 }
-
+form .action{
+	width: 100%;	
+}
 form input,
 form textarea{
-	width: 376px;
+	width: 100%;
 	height: 48px;
 	margin-bottom: 16px;
 	border: 1px solid  $grey-ligt;     
@@ -67,13 +72,12 @@ form textarea{
 	color: $text-grey;
 	font-family: 'TTLakes', sans-serif;
 	font-weight: medium;
+	box-sizing: border-box;
 	padding-left:20px ;
-	margin-left: auto;
-	margin-right: auto;
-
 }
 form textarea{
 	height: 118px;
+	padding-top: 12px;
 }
 .madal-feedBack__text
 {
@@ -82,6 +86,7 @@ form textarea{
 	font-weight: medium;
 	font-size: 14px;
 	height: 16px;
+	margin: 0;
 }
 .madal-feedBack__text span
 {
@@ -124,12 +129,7 @@ margin-top: 60px;
 
 }
 
-/*.madal-call.activ 
-   {
-	display: block;
-	position: absolute;
-	left:300px;
-   }*/
+
 
 }
 
@@ -144,18 +144,7 @@ margin-top: 60px;
 	   left:330px;
    }
 
-   .madal-feedBack.activ 
-   {
-	left:900px;
-   }
-  
- .back_menu.activ {
-	display: none;
-}
-.madal-call.activ 
-   {
-	left:900px;
-   }
+   
 
 }
 @media screen and (max-width:768px) {
@@ -163,15 +152,14 @@ margin-top: 60px;
 	{
 	 display: block;
 	 position: absolute;
-	 width: auto;
-	 left:auto;
-	 right: auto;
+	width: auto;
+	 
 	}
 	.madal-feedBack__close,
     .madal-call__close
          {
            position: static;
-           margin-bottom: 50px;
+           margin-bottom: 80px;
 
 }
 
@@ -179,7 +167,7 @@ margin-top: 60px;
 	{
 	   position: absolute;
 	   left:0px;
-	   width: 900px;
+	   width: 0;
 	   opacity: 0.01;
    }
   .back_menu.activ {
