--- a/src/scss/proect.scss
+++ b/src/scss/proect.scss
@@ -96,7 +96,10 @@ a {
 }
 .line__group,
 .line__repair,
-.line__checkstatus{
+.line__checkstatus,
+.line__chat,
+.line__profile
+{
 	margin-left: 16px;
 }
 /*line*/
