--- a/src/scss/block3.scss
+++ b/src/scss/block3.scss
@@ -232,14 +232,15 @@ margin-left: 12px;
 	justify-content:space-between;
 	flex-direction: row;
 	margin-top: 40px;
+	margin-bottom: 25px;
 	align-items: flex-start;
 	
 }
 .footer__item {
 	width: 220px;
-	margin-top: 32px;
-	margin-left: 16px;
-    margin-right: 16px;
+	margin-top: 32px; 
+	margin-right:  16px;
+	margin-left:  16px;
 	line-height: 16px;
 	font-size: 14px;
 	color:$text-grey;
@@ -253,13 +254,7 @@ margin-left: 12px;
 	width: auto;
 	margin: 16px 0 16px 16px;
 }
- /*@media screen and (min-width: 768px)  {
-
-	.call__goside,
-	.call__text {
-	margin-left: 16px;
-	}
-}*/
+ 
 
 
 
@@ -276,7 +271,7 @@ table{
 	display: none;
 }
 .footer{
-
+    margin-bottom: 19px;
 	flex-direction: column;
 	text-align: center;
 }
