--- a/src/scss/mobilMenu.scss
+++ b/src/scss/mobilMenu.scss
@@ -221,6 +221,8 @@ transition:transform 0.5s,
 	@media screen and (max-width: 768px) {
 		.backMenu{
 			width:100%;
+			height: 676px;
+			
 		}
 
 
