--- a/src/scss/modals.scss
+++ b/src/scss/modals.scss
@@ -9,9 +9,9 @@ $background-heder: white;
 $background-navlist_activ:white;
 $key-call:#FF3E79;
 
-*{
+/**{
 	border:1px solid green;
-}
+}*/
 @font-face {
 	font-family: 'TTLakes';
 	font-style: normal;
@@ -98,10 +98,21 @@ form textarea{
 float: right;
 margin-top: 60px;
 }
-
+.back_menu.activ {
+	display: none;
+}
 
 
 @media screen and (min-width:320px) {
+	.madal-call.activ h1::before,
+	.madal-feedBack.activ h1::before
+
+	  {
+		margin-left: -20px;
+		margin-right: 20px;
+	}
+
+
 	.madal-feedBack,
 	.madal-call
 	{
@@ -116,24 +127,23 @@ margin-top: 60px;
 	position: absolute;
 	left:auto;
 	right: 0;
+	height: 676px;
+	border-left: 1px solid #D9FFF5;
+	box-shadow: 0px 0px 10px 0px rgba(14, 24, 80, 0.2);
    }
+   
    main.activ
    {
 	  position: absolute;
-	  left:0px;
 	  width: 900px;
-	  opacity: 0.01;
+	  opacity: 0.036;
+	  right: 480px;
+	  height: 1440px;
+	  overflow: hidden;
+    }
+	
   }
- .back_menu.activ {
-	display: none;
-
-}
-
-
-
-}
-
-
+ 
 
 
 @media screen and (min-width:1121px) {
@@ -143,18 +153,31 @@ margin-top: 60px;
 		position: absolute;
 	   left:330px;
    }
+   .madal-call.activ,
+   .madal-feedBack.activ 
+   {
+	
+	height: 1440px;
+   }
 
-   
 
 }
-@media screen and (max-width:768px) {
+@media screen and (min-width: 768px) and (max-width: 1120px) {
+
+	.madal-call.activ,
 	.madal-feedBack.activ 
 	{
-	 display: block;
-	 position: absolute;
-	width: auto;
 	 
+	 height: 1024px;
 	}
+	main.activ
+   {
+	 
+	  height: 1024px;
+   }
+}
+@media screen and (max-width:768px) {
+	
 	.madal-feedBack__close,
     .madal-call__close
          {
@@ -175,11 +198,32 @@ margin-top: 60px;
  
  }
  
- .madal-call.activ 
+ 
+ }
+ @media screen and (min-width:769px) {
+	.madal-call.activ, 
+	.madal-feedBack.activ
 	{
 	 display: block;
 	 position: absolute;
-	 left:0px;
-	}
+	 right:0px;
+	 width: 440px;
+	padding:20px;
 	
+	  
+	}
+ }
+ @media screen and (max-width:768px) {
+	.madal-call.activ, 
+	.madal-feedBack.activ
+	{
+		display: block;
+	    position: absolute;
+	     width: auto;
+	    left:0px;
+		height: 676px;
+		border-left: 0px solid #D9FFF5;
+		box-shadow: 0px 0px 0px 0px rgba(14, 24, 80, 0.01);
+	  
+	}
  }
