--- a/src/scss/block3.scss
+++ b/src/scss/block3.scss
@@ -232,7 +232,7 @@ margin-left: 12px;
 	justify-content:space-between;
 	flex-direction: row;
 	margin-top: 40px;
-	margin-bottom: 25px;
+	padding-bottom: 25px;
 	align-items: flex-start;
 	
 }
