--- a/src/scss/proect.scss
+++ b/src/scss/proect.scss
@@ -76,7 +76,7 @@ a {
 	justify-content: space-between;
 	align-items: center;
 	background-color: $background-heder;
-	padding:0 7px;
+	padding:22px 7px;
 }
 .line__item{
 	justify-content: space-around;
