--- a/style.css
+++ b/style.css
@@ -67,7 +67,7 @@ a {
   justify-content: space-between;
   align-items: center;
   background-color: white;
-  padding: 0 7px; }
+  padding: 22px 7px; }
 
 .line__item {
   justify-content: space-around;
@@ -741,7 +741,7 @@ td {
   justify-content: space-between;
   flex-direction: row;
   margin-top: 40px;
-  margin-bottom: 25px;
+  padding-bottom: 25px;
   align-items: flex-start; }
 
 .footer__item {
